--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dynamic_color: ^1.6.2
+  firebase_core: ^2.7.0
+  firebase_auth: ^4.2.9
+  firebase_database: ^10.0.14
+  get: ^4.6.5
+  flutter_animate: ^4.1.0
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
