--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   get: ^4.6.5
   flutter_animate: ^4.1.0
   get_storage: ^2.0.3
+  google_sign_in: ^6.0.1
+  crypto: ^3.0.2
+  splashscreen:
+    git:
+      url: https://github.com/DPLYR-dev/SplashScreenFlutterPackage.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
