--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
     git:
       url: https://github.com/DPLYR-dev/SplashScreenFlutterPackage.git
       ref: master
+  cloud_firestore: ^4.4.3
+  flutter_rating_bar: ^4.0.1
+  firebase_storage: ^11.0.14
 
 dev_dependencies:
   flutter_test:
