Improvements to movie page, and search page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   firebase_storage: ^11.0.14
   card_swiper: ^2.0.4
+  draggable_bottom_sheet: ^1.0.2
+  interactive_bottom_sheet: ^0.1.2
 
 dev_dependencies:
   flutter_test:
