New feed review UI, package update, profile model update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,28 +34,33 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   dynamic_color: ^1.6.2
-  firebase_core: ^2.7.0
-  firebase_auth: ^4.2.9
-  firebase_database: ^10.0.14
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
+  firebase_database: ^10.0.16
   get: ^4.6.5
   flutter_animate: ^4.1.0
-  get_storage: ^2.0.3
-  google_sign_in: ^6.0.1
+  get_storage: ^2.1.1
+  google_sign_in: ^6.0.2
   crypto: ^3.0.2
   splashscreen:
     git:
       url: https://github.com/DPLYR-dev/SplashScreenFlutterPackage.git
       ref: master
-  cloud_firestore: ^4.4.3
+  cloud_firestore: ^4.4.5
   flutter_rating_bar: ^4.0.1
-  firebase_storage: ^11.0.14
+  firebase_storage: ^11.0.16
   path: ^1.8.3
-  image_picker: ^0.8.6+4
+  image_picker: ^0.8.7
   card_swiper: ^2.0.4
   draggable_bottom_sheet: ^1.0.2
   interactive_bottom_sheet: ^0.1.2
+  skeletons: ^0.0.3
+  time_formatter:
+    git:
+      url: https://github.com/alex27riva/time_formatter.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
