--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
     git:
       url: https://github.com/alex27riva/time_formatter.git
       ref: master
+  firebase_crashlytics: ^3.0.17
 
 dev_dependencies:
   flutter_test:
