Working Friends page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   url_launcher: ^6.1.10
   intl: ^0.17.0
   http: ^0.13.5
+  search_page: ^2.3.0
 
 dev_dependencies:
   flutter_test:
