--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   http: ^0.13.5
   search_page: ^2.3.0
   optimized_cached_image: ^3.0.1
+  easy_rich_text: ^1.2.0
 
 dev_dependencies:
   flutter_test:
